force-app/main/default/objects/Voucher_Product_Campaign__c/Voucher_Product_Campaign__c.object-meta.xml
<CustomObject>
    <label>Voucher Product Campaign</label>
    <nameField>
        <label>Voucher Product Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voucher Product Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>