force-app/main/default/objects/Voucher_Product_Campaign__c/fields/Product_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Product_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Campaign</label>
    <referenceTo>Product_Campaign__c</referenceTo>
    <relationshipLabel>Voucher Product Campaigns</relationshipLabel>
    <relationshipName>Voucher_Product_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>