force-app/main/default/objects/Voucher_Product_Campaign__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Voucher Product Campaigns</relationshipLabel>
    <relationshipName>Voucher_Product_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>