force-app/main/default/objects/Voucher_Product_Campaign__c/recordTypes/Voucher_Up_To_Discount.recordType-meta.xml
<RecordType>
    <fullName>Voucher_Up_To_Discount</fullName>
    <active>true</active>
    <label>Voucher Up To Discount</label>
</RecordType>